fixed DEL button font overlapping

--- a/style.css
+++ b/style.css
@@ -132,17 +132,9 @@ transition: transform 0.2s ease-in-out;
         color: black;
     }
     .screen{
-        /* display: flex;
-        justify-content: space-around;
-        flex-direction: column;
-        align-items: flex-end;
-        padding: 10px;
-        grid-column: 1 / -1;
-        background: #303943;
-        color: #C0DAAD; */
         font-size: 1.8rem;
-        /* border-radius: 8px 8px;
-        box-shadow: inset 5px 5px 5px 0px #1E252B;
-        margin-bottom:5px; */
     }
-}
+.del{
+    padding: 5px;
+    font-size: 1.6rem;
+}}
